# orangebox

./: CONTRIBUTING.md  Cargo.toml  FORMATS.md  LICENSE  README.md
.github/workflows/: ci.yml
crates/application/: Cargo.toml
crates/application/src/: lib.rs  ports.rs  services.rs  usecases.rs
crates/cli/: Cargo.toml
crates/cli/src/: main.rs  ui.html  ui.rs
crates/cli/src/dto/: mod.rs
crates/domain/: Cargo.toml
crates/domain/src/: lib.rs
crates/infrastructure/: Cargo.toml
crates/infrastructure/src/: launchd.rs  lib.rs  proto.rs  sqlite.rs  watcher.rs
crates/infrastructure/src/adapters/: antigravity.rs  claude_code.rs  copilot.rs  mod.rs
crates/infrastructure/src/service/: launchd.rs  mod.rs  systemd.rs  windows.rs
ui/: .gitignore  index.html  package-lock.json  package.json  vite.config.ts
ui/src/: App.css  App.tsx  api.ts  index.css  types.ts
ui/src/components/: Sidebar.tsx  Transcript.tsx
