[workspace]
resolver = "2"
members = [
    "crates/domain",
    "crates/application",
    "crates/infrastructure",
    "crates/cli",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/samimohameed/orangebox"
homepage = "https://github.com/samimohameed/orangebox"
keywords = ["ai", "claude", "recovery", "flight-recorder", "cli"]
categories = ["command-line-utilities", "development-tools"]

[workspace.dependencies]
orangebox-domain = { path = "crates/domain", version = "0.1.0" }
orangebox-application = { path = "crates/application", version = "0.1.0" }
orangebox-infrastructure = { path = "crates/infrastructure", version = "0.1.0" }

thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
notify = "7"
clap = { version = "4", features = ["derive"] }
chrono = "0.4"
dirs = "5"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
