[package]
name = "orangebox-application"
version.workspace = true
edition.workspace = true
license.workspace = true

# Application layer: use cases and ports. Depends on the domain only —
# never on infrastructure. `thiserror` is the one permitted utility crate.
[dependencies]
orangebox-domain = { workspace = true }
thiserror = { workspace = true }
