[package]
name = "blackbox-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "blackbox"
path = "src/main.rs"

# Composition root: the only crate allowed to know every layer, because its
# job is to wire infrastructure implementations into application use cases.
[dependencies]
blackbox-domain = { workspace = true }
blackbox-application = { workspace = true }
blackbox-infrastructure = { workspace = true }
clap = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tiny_http = "0.12"
serde = { workspace = true }
serde_json = { workspace = true }
