[package]
name = "orangebox-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "orangebox"
path = "src/main.rs"

# Composition root: the only crate allowed to know every layer, because its
# job is to wire infrastructure implementations into application use cases.
[dependencies]
orangebox-domain = { workspace = true }
orangebox-application = { workspace = true }
orangebox-infrastructure = { workspace = true }
clap = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tiny_http = "0.12"
serde = { workspace = true }
serde_json = { workspace = true }

[target.'cfg(unix)'.dependencies]
libc = "0.2"
