[package]
name = "blackbox-infrastructure"
version.workspace = true
edition.workspace = true
license.workspace = true

# Infrastructure layer: implements the application's ports with real
# technology (SQLite, filesystem, file watching, tool-specific parsers).
[dependencies]
blackbox-domain = { workspace = true }
blackbox-application = { workspace = true }
rusqlite = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
notify = { workspace = true }
chrono = { workspace = true }
dirs = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tempfile = "3"
