[package]
name = "orangebox-infrastructure"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
description = "SQLite archive, tool adapters, and platform services for Orangebox"

# Infrastructure layer: implements the application's ports with real
# technology (SQLite, filesystem, file watching, tool-specific parsers).
[dependencies]
orangebox-domain = { workspace = true }
orangebox-application = { workspace = true }
rusqlite = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
notify = { workspace = true }
chrono = { workspace = true }
dirs = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tempfile = "3"
